attempt to fix DT-2001, fix spacing below images for Windows phone

--- a/less/plugin-ecommerce.less
+++ b/less/plugin-ecommerce.less
@@ -624,6 +624,8 @@
 @media only screen and (max-width : 768px) and (min-width : 480px) {
     .summary-table .cell--image {
         max-width: 50px;
+        max-height: 170px;
+        height: auto;
     }
 }
 
